rustdocs/errors/rust-bitcoin-fuzz-fuzz_targets-p2p-arbitrary_addrv2.rs.txt
error[E0432]: unresolved import `arbitrary`
 --> ../rust-bitcoin/fuzz/fuzz_targets/p2p/arbitrary_addrv2.rs:4:5
  |
4 | use arbitrary::{Arbitrary, Unstructured};
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `arbitrary`
  |
help: you might be missing a crate named `arbitrary`, add it to your project and import it in your code
  |
1 + extern crate arbitrary;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `p2p`
 --> ../rust-bitcoin/fuzz/fuzz_targets/p2p/arbitrary_addrv2.rs:6:5
  |
6 | use p2p::address::AddrV2;
  |     ^^^ use of unresolved module or unlinked crate `p2p`
  |
help: you might be missing a crate named `p2p`, add it to your project and import it in your code
  |
1 + extern crate p2p;
  |

error[E0432]: unresolved import `honggfuzz`
 --> ../rust-bitcoin/fuzz/fuzz_targets/p2p/arbitrary_addrv2.rs:5:5
  |
5 | use honggfuzz::fuzz;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `honggfuzz`
  |
help: you might be missing a crate named `honggfuzz`, add it to your project and import it in your code
  |
1 + extern crate honggfuzz;
  |

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
